# trip_agent

./: Makefile  pyproject.toml  template.env
src/: _constants.py  _schemas.py  _settings.py  app.py  main.py
src/components/: __init__.py
src/components/agents/handlers/: base.py
src/components/agents/handlers/handle_flight_booking/: flight_booking_handler.py
src/components/agents/tools/: flight_booking_tools.py
src/services/flight/: _constant.py  db.py  models.py  sv.py
src/store/: __init__.py  tracker_store.py
tests/: __init__.py
tests/flight_services/: test_get_flight.py
ui/: app.py
